bug fix and dark mode

--- a/src/components/Header/Style.css
+++ b/src/components/Header/Style.css
@@ -100,6 +100,12 @@ a{
     font-size: 12px;
     font-weight: 500;
 }
+@media screen and (min-width:600px) {
+    .extraMsg{
+        display: none;
+    }
+    
+}
 #signOut-btn{
     color: gray;
     border: none;
