--- a/src/components/main/Style.css
+++ b/src/components/main/Style.css
@@ -74,7 +74,7 @@ darkMain{
     padding-left: 7px;
     
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
     #mainContent {
       flex-direction: column;
       align-items: center;
